--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
     <script src="script.js"></script>
 </body>
-
+<footer style="text-align: center; padding: 10px; margin-top: 30px; color: #fff; background: #0a4fa3;">
+    Desenvolvido por: <strong>Julia Nascimento</strong>
+</footer>
 </html>
+
 
